[gd_scene load_steps=19 format=3 uid="uid://bqn8msoyatm84"]

[ext_resource type="Script" path="res://Scripts/SteelGrapherApp.gd" id="1_ulht0"]
[ext_resource type="Script" path="res://Scripts/AppVisualTransition.gd" id="2_tna43"]
[ext_resource type="Script" path="res://Scripts/AppBase.gd" id="3_f32ao"]
[ext_resource type="FontFile" uid="uid://e1r807bn3v02" path="res://Fonts/Gontserrat-Light.ttf" id="4_qhh7d"]
[ext_resource type="Texture2D" uid="uid://dkrbwqj75e6g2" path="res://Images/cross_small.png" id="5_p6v88"]
[ext_resource type="Texture2D" uid="uid://cy466yisyc6ha" path="res://Images/line_horizontal.png" id="6_7wmix"]
[ext_resource type="FontFile" uid="uid://cdfa4emafiofo" path="res://Fonts/Unispace Rg.otf" id="7_w16mv"]
[ext_resource type="Script" path="res://Scripts/StockMarketGraph.gd" id="8_bccjn"]
[ext_resource type="Script" path="res://Scripts/GraphSettingsPanel.gd" id="9_11c6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsmjf"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oslj3"]
bg_color = Color(0.0745098, 0.0745098, 0.0745098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y01m"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlx1d"]
bg_color = Color(1, 0, 0, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gluvs"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgxlq"]
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsvq3"]
bg_color = Color(0.370364, 0.370364, 0.370364, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5jka6"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18u12"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[node name="SteelGrapher" type="Panel"]
visible = false
offset_right = 1920.0
offset_bottom = 1040.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rsmjf")
script = ExtResource("1_ulht0")

[node name="AppVisualTransitionComponent" type="Node" parent="."]
script = ExtResource("2_tna43")

[node name="AppBaseComponent" type="Node" parent="."]
script = ExtResource("3_f32ao")

[node name="Guide" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 288.0
offset_bottom = 584.0
theme_override_fonts/normal_font = ExtResource("4_qhh7d")
theme_override_font_sizes/normal_font_size = 20
text = "Welcome to Steel Grapher!
Currently, there are default values loaded into the software. To create your own graph, simply enable the DataEditor, and input your data. Remember to seperate your X and Y values with a comma. -> , <- Once you have entered your data, setup the graph by selecting a desired number of columns and rows. To customize the colours of the graph, simply open the ColorPicker, select a color, and apply the color via the Set Color Buttons. Finally generate your graph via the Generate Graph Button!"

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oslj3")

[node name="CloseButton" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 1840.0
offset_right = 1912.0
offset_bottom = 48.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4y01m")
theme_override_styles/hover = SubResource("StyleBoxFlat_vlx1d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gluvs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pgxlq")

[node name="TextureRect" type="TextureRect" parent="TopPanel/CloseButton"]
layout_mode = 0
offset_left = 12.0
offset_right = 79.0
offset_bottom = 64.0
scale = Vector2(0.714445, 0.714445)
texture = ExtResource("5_p6v88")

[node name="MinimiseButton" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 1760.0
offset_right = 1832.0
offset_bottom = 48.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4y01m")
theme_override_styles/hover = SubResource("StyleBoxFlat_tsvq3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gluvs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pgxlq")

[node name="TextureRect" type="TextureRect" parent="TopPanel/MinimiseButton"]
layout_mode = 0
offset_left = 11.0
offset_right = 78.0
offset_bottom = 64.0
scale = Vector2(0.714445, 0.714445)
texture = ExtResource("6_7wmix")

[node name="RichTextLabel" type="RichTextLabel" parent="TopPanel"]
layout_mode = 0
offset_left = 8.0
offset_right = 416.0
offset_bottom = 55.0
theme_override_fonts/normal_font = ExtResource("7_w16mv")
theme_override_font_sizes/normal_font_size = 51
text = "STEEL GRAPHER"
scroll_active = false

[node name="Disclaimer" type="RichTextLabel" parent="TopPanel"]
layout_mode = 0
offset_left = 424.0
offset_right = 1752.0
offset_bottom = 55.0
theme_override_fonts/normal_font = ExtResource("7_w16mv")
theme_override_font_sizes/normal_font_size = 20
text = "Steel Grapher is a piece of lightweight graphing software designed to deliver graphing capabilites to CrowOS. This software is in the early stages of development, use with caution! Crashes may occur!"
scroll_active = false

[node name="Grapher" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 56.0
offset_right = 1920.0
offset_bottom = 1040.0
script = ExtResource("8_bccjn")

[node name="TextDisplay" type="Control" parent="Grapher"]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 984.0

[node name="GraphRenderer" type="TextureRect" parent="Grapher"]
texture_filter = 1
layout_mode = 0
offset_left = 320.0
offset_top = 36.0
offset_right = 1856.0
offset_bottom = 932.0

[node name="Settings" type="Panel" parent="Grapher"]
layout_mode = 0
offset_top = 552.0
offset_right = 232.0
offset_bottom = 984.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5jka6")
script = ExtResource("9_11c6x")

[node name="GenerateGraph" type="Button" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 376.0
offset_right = 224.0
offset_bottom = 424.0
text = "Generate Graph"

[node name="Background" type="Button" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 336.0
offset_right = 224.0
offset_bottom = 368.0
text = "Set Background Color"

[node name="LineColor" type="Button" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 296.0
offset_right = 224.0
offset_bottom = 327.0
text = "Set Line Color"

[node name="GridColor" type="Button" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 256.0
offset_right = 224.0
offset_bottom = 287.0
text = "Set Grid Color"

[node name="ResolutionY" type="SpinBox" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 120.0
offset_top = 24.0
offset_right = 224.0
offset_bottom = 64.0
min_value = 100.0
max_value = 1080.0
value = 1080.0
suffix = "y"

[node name="ResolutionX" type="SpinBox" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 64.0
min_value = 100.0
max_value = 1920.0
value = 1920.0
suffix = "x"

[node name="Rows" type="SpinBox" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 120.0
offset_top = 88.0
offset_right = 224.0
offset_bottom = 128.0
min_value = 1.0
max_value = 50.0
value = 2.0

[node name="Columns" type="SpinBox" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 88.0
offset_right = 112.0
offset_bottom = 128.0
min_value = 1.0
max_value = 50.0
value = 2.0

[node name="LineThickness" type="SpinBox" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 152.0
offset_right = 224.0
offset_bottom = 192.0
min_value = 1.0
max_value = 20.0
value = 2.0
suffix = "px * Each Side"

[node name="ResolutionLabel" type="RichTextLabel" parent="Grapher/Settings"]
layout_mode = 0
offset_right = 232.0
offset_bottom = 24.0
bbcode_enabled = true
text = "[center]Resolution"
scroll_active = false

[node name="ColorPickerLabel" type="RichTextLabel" parent="Grapher/Settings"]
layout_mode = 0
offset_top = 192.0
offset_right = 232.0
offset_bottom = 216.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]ColorPicker"
scroll_active = false

[node name="DataLabel" type="RichTextLabel" parent="Grapher/Settings"]
layout_mode = 0
offset_top = 224.0
offset_right = 232.0
offset_bottom = 248.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]DataEditor"
scroll_active = false

[node name="ColumnsLabel" type="RichTextLabel" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 88.0
bbcode_enabled = true
text = "[center]Columns"
scroll_active = false

[node name="LineThicknessLabel" type="RichTextLabel" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 128.0
offset_right = 224.0
offset_bottom = 152.0
bbcode_enabled = true
text = "[center]Line Thickness"
scroll_active = false

[node name="RowsLabel" type="RichTextLabel" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 120.0
offset_top = 64.0
offset_right = 208.0
offset_bottom = 88.0
bbcode_enabled = true
text = "[center]Rows"
scroll_active = false

[node name="ToggleSettings" type="CheckButton" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 176.0
offset_top = 192.0
offset_right = 220.0
offset_bottom = 216.0

[node name="ToggleData" type="CheckButton" parent="Grapher/Settings"]
layout_mode = 0
offset_left = 176.0
offset_top = 224.0
offset_right = 220.0
offset_bottom = 248.0

[node name="ColorPicker" type="ColorPicker" parent="Grapher/Settings"]
visible = false
layout_mode = 0
offset_left = 491.0
offset_top = -20.0
offset_right = 657.0
offset_bottom = 548.0

[node name="DataPanel" type="Panel" parent="Grapher/Settings"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_right = 472.0
offset_bottom = 432.0
theme_override_styles/panel = SubResource("StyleBoxFlat_18u12")

[node name="TextEdit" type="TextEdit" parent="Grapher/Settings/DataPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 224.0
offset_bottom = 432.0
text = "0,0
2,4
3,7
5,9
8,14
14,20"

[node name="ToggleSettings" type="CheckButton" parent="Grapher"]
layout_mode = 0
offset_top = 552.0
offset_right = 44.0
offset_bottom = 576.0
button_pressed = true
